--- a/app/src/main/res/layout/fragment_cluster.xml
+++ b/app/src/main/res/layout/fragment_cluster.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
@@ -9,4 +10,36 @@
         android:layout_height="fill_parent"
         />
 
-</LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="65dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/cluster_layout_floating"
+        android:layout_height="150dp">
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_clusterSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:backgroundTint="@color/colorLogo2"
+            app:srcCompat="@android:drawable/ic_menu_search" />
+
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_clusterRefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="25dp"
+            app:backgroundTint="@color/colorLogo2"
+            app:srcCompat="@android:drawable/ic_input_get" />
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
