--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorLogo2">#a320d7</color>
     <color name="colorLogo3">#5a1078</color>
     <color name="white">#ffffff</color>
+    <color name="btnColor">#ff8b33</color>
 </resources>
