fix floating botton on android <5

--- a/app/src/main/res/layout/fragment_city.xml
+++ b/app/src/main/res/layout/fragment_city.xml
@@ -10,19 +10,20 @@
         android:layout_height="fill_parent"
         />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="65dp"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="75dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:id="@+id/area_layout_floating"
-        android:layout_height="150dp">
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_height="180dp">
 
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_areaSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:useCompatPadding="true"
             app:backgroundTint="@color/colorLogo2"
             app:srcCompat="@android:drawable/ic_menu_search" />
 
@@ -32,13 +33,12 @@
             android:id="@+id/fab_areaRefresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="25dp"
+            android:layout_below="@id/fab_areaSearch"
+            app:useCompatPadding="true"
             app:backgroundTint="@color/colorLogo2"
             app:srcCompat="@android:drawable/ic_input_get" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
