--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.myrepublicid.salessupport.com.myrepublicid.salessupport.MainActivity"
+    tools:context="id.co.myrepublic.salessupport.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
     <!--<com.daimajia.numberprogressbar.NumberProgressBar-->
@@ -32,21 +32,31 @@
 
         <ProgressBar
             android:id="@+id/content_main_progressbar"
-            style="?android:attr/progressBarStyle"
+            android:indeterminateDrawable="@drawable/progressbar_drawable"
             android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
+            android:layout_marginTop="0dp"
             android:visibility="gone"
-            android:layout_height="wrap_content" />
+            android:layout_height="150dp" />
 
         <TextView
             android:id="@+id/content_main_progressbar_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="90dp"
             android:textColor="@color/colorLogo"
+            android:textSize="22dp"
             android:visibility="gone"
             android:text="@string/activity_loading" />
+
+        <ImageView
+            android:id="@+id/content_main_progressbar_icon"
+            android:layout_width="70dp"
+            android:layout_gravity="center"
+            android:layout_height="70dp"
+            android:visibility="gone"
+            app:srcCompat="@mipmap/ic_launcher" />
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
