--- a/app/src/main/res/layout/row_item_common.xml
+++ b/app/src/main/res/layout/row_item_common.xml
@@ -5,42 +5,45 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/cityname"
+        android:id="@+id/rowitem_maintext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="Jakarta"
+        android:text=""
+        android:layout_marginLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/txt_areacode"
+        android:id="@+id/rowitem_maintext2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cityname"
-
-        android:text="Area Code  "
+        android:layout_toRightOf="@id/rowitem_maintext"
+        android:layout_marginLeft="10dp"
+        android:text=""
         android:textColor="@android:color/black" />
-
 
     <TextView
-        android:id="@+id/arpu"
+        android:id="@+id/rowitem_subtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cityname"
-        android:layout_toRightOf="@id/txt_areacode"
-        android:text="101"
-        android:textColor="@android:color/black" />
-
+        android:text=""
+        android:layout_marginLeft="5dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/black"
+        android:layout_below="@id/rowitem_maintext" />
 
     <TextView
-        android:id="@+id/active_subs"
+        android:id="@+id/rowitem_subtext2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/arpu"
-        android:layout_marginTop="2dp"
-        android:visibility="gone"
+        android:layout_toRightOf="@id/rowitem_subtext"
+        android:layout_below="@id/rowitem_maintext2"
+        android:layout_marginLeft="10dp"
+        android:text=""
         android:textColor="@android:color/black" />
+
+
 
 </RelativeLayout>
