--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="DialogTheme">
+        <item name="android:windowEnterAnimation">@anim/expand_in</item>
+        <item name="android:windowExitAnimation">@anim/expand_out</item>
+    </style>
+
 
 
 </resources>
