--- a/app/src/main/res/layout/dialog_addcompetitor.xml
+++ b/app/src/main/res/layout/dialog_addcompetitor.xml
@@ -19,10 +19,14 @@
         android:layout_width="300dp"
         android:spinnerMode="dropdown"
         android:layout_gravity="center"
+        android:background="@drawable/spinner_bg"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:paddingBottom="10dp"
         android:prompt="@string/spinner_competitor_prompt"
         android:entries="@array/competitor_arrays"
+
         android:layout_height="wrap_content" />
 
     <TextView
@@ -96,13 +100,19 @@
         <Button
             android:id="@+id/dialogitem_btn_send"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:textColor="@color/white"
+            android:background="@drawable/button_blue"
             android:text="OK" />
 
         <Button
             android:id="@+id/dialogitem_btn_cancel"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:textColor="@color/white"
+            android:background="@drawable/button_blue"
             android:text="Cancel" />
     </LinearLayout>
 
