--- a/app/src/main/res/layout/dialog_addcompetitor.xml
+++ b/app/src/main/res/layout/dialog_addcompetitor.xml
@@ -104,7 +104,7 @@
             android:layout_margin="10dp"
             android:textColor="@color/white"
             android:background="@drawable/button_blue"
-            android:text="OK" />
+            android:text="@string/button_ok" />
 
         <Button
             android:id="@+id/dialogitem_btn_cancel"
@@ -113,7 +113,7 @@
             android:layout_margin="10dp"
             android:textColor="@color/white"
             android:background="@drawable/button_blue"
-            android:text="Cancel" />
+            android:text="@string/button_cancel" />
     </LinearLayout>
 
 
